# NextVideo

./: .gitignore  CMakeLists.txt  README.md  VideoAnalyzer.pro  VideoAnalyzer.qml  build.sh  main.cpp  main.qml  qml.qrc  resources.qrc  videocontroller.cpp  videocontroller.h
include/: ffmpeg_wrapper.h  mainwindow.h
qml/: MainWindow.qml
qml/components/: CustomButton.qml
src/: FileHandler.cpp  FileHandler.h  MainWindow.cpp  MainWindow.h  backend.cpp  backend.h  ffmpeg_wrapper.cpp  main.cpp  mainwindow.cpp
src/deleter/: CMakeLists.txt  deleter.cpp  deleter.h
src/fileinfo/: CMakeLists.txt  Fileinfo.cpp  Fileinfo.h
